# crm

./: .tokeignore  Cargo.toml  Makefile  README.md  _typos.toml  deny.toml
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml  build.rs  metadata.yml
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml  build.rs  metadata.yml
crm-send/src/: config.rs  lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: notification.rs
crm-send/tests/: service.rs
crm/src/: client.rs  config.rs  lib.rs  server.rs
crm/src/abi/: auth.rs  mod.rs
crm/src/pb/: crm.rs
fixtures/: cert.pem  key.pem  nginx.conf  project.cloud+4-key.pem  project.cloud+4.pem  rootCA.pem  token
protos/crm/: crm.proto  rpc.proto
protos/notification/: messages.proto  rpc.proto
protos/user-stats/: messages.proto  rpc.proto
user-stat/: .env  Cargo.toml  build.rs  user_stat.yml
user-stat/examples/: gen.rs
user-stat/fixtures/: data.sql
user-stat/migrations/: 20241019121220_init.sql  20241021045309_index.sql
user-stat/src/: config.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: user_stats.rs
user-stat/tests/: service.rs
