[workspace]
members = ["crm", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.90"
chrono = { version = "0.4.38", features = ["serde"] }
fake = { version = "2.10.0", features = ["derive", "chrono"] }
prost = "0.13.3"
prost-build = "0.13.3"
prost-types = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.12.3", features = ["zstd", "tls"] }
tonic-build = "0.12.3"
