[package]
name = "crm-metadata"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
fake = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }
