[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
fake = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
nanoid = "0.4.0"
rand = "0.8.5"
