[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
derive_builder = "0.20.2"
fake = { workspace = true }
futures = "0.3.31"
itertools = "0.13.0"
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = "0.6.2"
tonic-build = { workspace = true }

[dev-dependencies]
nanoid = "0.4.0"
rand = "0.8.5"
